css/styles.scss
*, *:before, *:after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}


$font: 'trailr', sans-serif;
$background: #fefefe;
$text: #4b507a;
$pfont:'traill', sans-serif;
$hfont:'trailb', sans-serif;
$blue: #00129a;

@font-face {
  font-family: 'trailr';
  src: url('../fonts/PaulGrotesk-Regular-Trail.otf'); /* IE9 Compat Modes */
}

@font-face {
  font-family: 'traill';
  src: url('../fonts/PaulGrotesk-Thin-Trail.otf'); /* IE9 Compat Modes */
}

@font-face {
  font-family: 'trailb';
  src: url('../fonts/PaulGrotesk-Bold-Trail.otf'); /* IE9 Compat Modes */
}

body {
    background-color: white;
    margin: 0;
    font-family: $font;
}
h1 {
    font-family: $hfont;

}

p {
    color: black;
    font-size: 1.5em;
    border: 0;
    font-family: 'traill'
}

#main {
    transition: margin-left .5s;
    margin: 20px;

}


.center-block {
    float: none;
}
// Navigation styling

.sidenav {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 1;
    top: 0;
    right: 0;
    background-color: white;
    overflow-x: hidden;
    padding-top: 60px;
    transition: 0.5s;
}

.sidenav a {
    padding: 8px 8px 8px 32px;
    text-decoration: none;
    font-size: 25px;
    color: #22292C;
    display: block;
    transition: 0.3s
}

.sidenav a:hover, .offcanvas a:focus{
    color: #f1f1f1;
}


.sidenav .closebtn {
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 36px;
    margin-left: 50px;
}

.arrow {
  position: fixed;
  width: 48px;
  height: 48px;
  right: 25;
  margin: 20px;

  background: white;
  border: 4px solid #333;
  span {
    position:absolute;
    left:0;
    background: #333;
    height: 4px;
    width: inherit;
    margin: auto;
    left: 4px;
    &.top {
      top: 11px;
    }
    &.middle {
      top: 18px;
      }
    &.bottom {
      top: 25px;
    }
  }
}

.arrowchild {
    position:relative;
    width: 72%;
    margin: auto;
}

.arrow span {
  -webkit-transition: all 0.5s ease-in-out;
  -moz-transition: all 0.5s ease-in-out;
  -o-transition: all 0.5s ease-in-out;
  transition: all 0.5s ease-in-out;
}

.arrow:hover {

     transition: all 0.5s ease-in-out;
    cursor: pointer;
  span {

      -webkit-transition: all 0.5s ease-in-out;
      -moz-transition: all 0.5s ease-in-out;
      -o-transition: all 0.5s ease-in-out;
      transition: all 0.5s ease-in-out;
     background: #333;

      &.top {
          top: 20px;
          transform: rotate(-45deg);
      }
      &.bottom {
          top: 20px;
          transform: rotate(45deg);

      }
      &.middle {
          display: none;
      }
    }
}

.greeting {
    margin-top: 3.5em;
    padding: 10px 0px 15px 50px;
    border-radius: 2px;
}

.greetingbox {
    padding: 22px 0px 25px 22px;
    // border: 9px solid #333;
    margin: auto;
}

//Right Background Panel
.wrap {
  height: 94vh;
  position: relative;
  overflow: hidden;


  .bg {
    width: 100%;
    height: 100vh;
    position: absolute;
    top: 0;
    left: 0;
    z-index: -1;
    background: url('../images/bg.jpg') no-repeat center center;
    background-size: cover;
    transform: scale(1.1);
  }
}

.scroll-downs {
  position: absolute;
  top: 85vh;
  right: 0;
  bottom: 0;
  left: 0;
  margin: auto;

  width :34px;
  height: 55px;
}
.mouse {
  width: 3px;
  padding: 5px 8px;
  height: 20px;
  border: 3px solid white;
  border-radius: 25px;
  opacity: 0.6;
  box-sizing: content-box;
}
.scroller {
  width: 3px;
  height: 6px;
  border-radius: 25%;
  background-color: white;
  animation-name: scroll;
  animation-duration: 2.2s;
  animation-timing-function: cubic-bezier(.15,.41,.69,.94);
  animation-iteration-count: infinite;
}
@keyframes scroll {
  0% { opacity: 0; }
  10% { transform: translateY(0); opacity: 1; }
  100% { transform: translateY(15px); opacity: 0;}
}

#works.row {
    margin: 0;
}


#works > .row {
    margin: 0;
}

#works {
    bottom: -200vh;
    position: absolute;
    background-color: white;
    text-align: center;
    display: none;
    h2 {
        font-size: 5em;
        color: white;
        margin-top: 3em;
        font-family: 'trailr';
    }
}

.closeworks {

}



.banner {
    overflow: hidden;
}
.worksbanner {
    height: 500px;
    background: url('../images/worksbanner.jpg') no-repeat center;
    background-size: cover;
}


.btnline {
    background: none;
    border-radius: 0;
    border: 5px solid #333;
    font-family: 'trailb';
    padding: 9px 21px 8px 22px;
    margin-top: 16px;
    text-transform: uppercase;
    font-size: 13px;
    &:focus {
        outline: 0;
    }
}



.divide {
    width: 20%;
    margin: 25px auto;
    border-top: 4px solid white;
}

.card {
    overflow: hidden;
}

#gowander {
    img {
     width: 100%;
    }
}

//PORTFOLIO FILTER CSS

#portfolio {
    margin: 1rem 0;
    -webkit-column-count: 3;
    -moz-column-count: 3;
    column-count: 3;
    -webkit-column-gap: 1rem;
    -moz-column-gap: 1rem;
    column-gap: 1rem;
    -webkit-column-width: 33.33333333333333%;
    -moz-column-width: 33.33333333333333%;
    column-width: 33.33333333333333%;
}
.tile {
    -webkit-transform: scale(0);
    transform: scale(0);
    -webkit-transition: all 350ms ease;
    transition: all 350ms ease;

}
.tile:hover {

}

.scale-anm {
  transform: scale(1);
}


p{
  padding:10px;
  border-bottom: 1px #ccc dotted;
  text-decoration: none;
  font-family: lato;
  text-transform:uppercase;
  font-size: 12px;
  color: #333;
  display:block;
  float:left;
}

p:hover {
  cursor:pointer;
  background: #333;
  color:#eee; }

.tile img {
    max-width: 100%;
    width: 100%;
    height: auto;
    margin-bottom: 1rem;

}

.filbtn {
    font-family: 'traill';
    font-size: 2rem;
    text-decoration: none;
    cursor: pointer;
    display: inline-block;
    line-height: normal;
    padding: .5rem 1rem;
    margin: 0 3px 30px 3px;
    height: auto;
    border: 2px solid black;
    vertical-align: middle;
    -webkit-appearance: none;
    color: black;
    background-color: rgba(0, 0, 0, 0);
}

.filbtn:hover {
  text-decoration: none;
}

.filbtn:focus {
  outline: none;
  border-color: var(--darken-2);
  box-shadow: 0 0 0 3px var(--darken-3);
}

::-moz-focus-inner {
  border: 0;
  padding: 0;
}

#filterprojects {
    margin-top: 50px!important;
}

.worksheader {
    top: 10;
    left: calc(50% - 225px/2);
    position: fixed;
}

.show {
    display: block;
}
// MEDIA QUERIES

@media screen and (max-height: 450px) {
    .sidenav {padding-top: 15px;}
    .sidenav a {font-size: 18px;}
}

